# DataPipe-v2

./: README.md  docker-compose.yml  pyproject.toml  requirements.txt
datapipe/: __init__.py  cli.py  engine.py  transforms.py  watcher.py
datapipe/memory/: __init__.py  session.py
datapipe/parsers/: __init__.py  base.py  csv_parser.py  docx_parser.py  excel_parser.py  html_parser.py  image_parser.py  json_parser.py  pdf_parser.py  python_parser.py  text_parser.py
examples/: 01_products.py  02_employees.py  03_knowledge_base.py
examples/data/: employees.json  kb_engineering.md  products.csv
tests/: test_datapipe.py
